Fix bug in testMulImm32SignExtend https://bugs.webkit.org/show_bug.cgi?id=200358

Reviewed by Mark Lam.

Also, have it run in more configurations.

* b3/testb3_2.cpp:
(testMulImm32SignExtend):
* b3/testb3_3.cpp:
(addArgTests):

Canonical link: https://commits.webkit.org/214137@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@248133 268f45cc-cd09-0410-ab3c-d52691b4dbfc